Modifying getSortedList to sort groceries alphabetically.